# impresso-pycommons

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  Pipfile  README.md  compress_canonical.ipynb  fulltext_rebuilder.ipynb  mr_NOTES.md  pyproject.toml  rebuild_schema.md  requirements.txt  setup.py  test_s3.ipynb  tox.ini
docs/: conf.py  images.rst  index.html  index.rst  io.rst  rebuild.rst  utils.rst  versioning.rst
docs/_build/doctrees/: environment.pickle  images.doctree  index.doctree  io.doctree  rebuild.doctree  utils.doctree  versioning.doctree
docs/_build/html/: .buildinfo  genindex.html  images.html  index.html  io.html  objects.inv  py-modindex.html  rebuild.html  search.html  searchindex.js  utils.html  versioning.html
impresso_commons/classes/: __init__.py  contentitem.py
impresso_commons/config/: config.example.md  config.loader.example.md  config.rero.example.md  config.s3.example.md  solr_ci_builder_config.example.json
impresso_commons/data/config/: GDL.json  JDG.json  cluster.json  conf.json  conf2.json  remaining_nps.json
impresso_commons/data/manifest_config/: example_manifest_config.json  manifest.config.example.md  manifest_config.json  ner_mft_config.json
impresso_commons/data/rebuilt/: GDL-1799.jsonl.bz2  JDG-1830.jsonl.bz2  NZZ-1780.jsonl.bz2  NZZ-1784.jsonl.bz2
impresso_commons/data/rebuilt-passim/: IMP-00.jsonl.bz2  IMP-01.jsonl.bz2  IMP-02.jsonl.bz2  IMP-03.jsonl.bz2  IMP-04.jsonl.bz2  IMP-05.jsonl.bz2  IMP-06.jsonl.bz2  IMP-07.jsonl.bz2  IMP-08.jsonl.bz2  IMP-09.jsonl.bz2  IMP-10.jsonl.bz2  IMP-11.jsonl.bz2  IMP-12.jsonl.bz2  IMP-13.jsonl.bz2  IMP-14.jsonl.bz2  IMP-15.jsonl.bz2  IMP-16.jsonl.bz2  IMP-17.jsonl.bz2  IMP-18.jsonl.bz2  IMP-19.jsonl.bz2  IMP-20.jsonl.bz2  IMP-21.jsonl.bz2  IMP-22.jsonl.bz2  IMP-23.jsonl.bz2  IMP-24.jsonl.bz2  IMP-25.jsonl.bz2  IMP-26.jsonl.bz2  IMP-27.jsonl.bz2  IMP-28.jsonl.bz2  IMP-29.jsonl.bz2  IMP-30.jsonl.bz2  IMP-31.jsonl.bz2  IMP-32.jsonl.bz2  IMP-33.jsonl.bz2  IMP-34.jsonl.bz2  IMP-35.jsonl.bz2  IMP-36.jsonl.bz2  IMP-37.jsonl.bz2  IMP-38.jsonl.bz2  IMP-39.jsonl.bz2  (+10 more)
impresso_commons/data/xmi/: GDL-1799-02-16-a-i0011.xmi  GDL-1910-06-24-a-i0001.xmi  GDL-1910-06-24-a-i0004.xmi  GDL-1910-06-24-a-i0012.xmi  IMP-1998-09-28-a-i0136.xmi  NZZ-1800-07-22-a-i0001.xmi  typesystem.xml
impresso_commons/data_versioning/: data_manifest.py
impresso_commons/images/: README_olive_boxes.md  img_utils.py  olive_boxes.py  utils.py
impresso_commons/path/: __init__.py  config.example.md  path_fs.py  path_s3.py
impresso_commons/text/: __init__.py  classes.py  dask_preprocessing.py  helpers.py  rebuild_schema.md  rebuilder.py
impresso_commons/utils/: __init__.py  config_loader.py  daskutils.py  kube.py  s3.py  s3_delete.py  uima.py  utils.py
impresso_commons/versioning/: compute_manifest.py  data_manifest.py  data_statistics.py  helpers.py
notebooks/: canonical_manifest_recomputation.ipynb  compress_canonical.ipynb  rebuilt_manifest_recomputation.ipynb
scripts/: compute_manifest_runai.sh  docker_image.sh  example_config_manifest_runai.sh  example_config_rebuilt_runai.sh  rebuild_on_runai.md  start_dask_cluster.sh  start_rebuilt_runai.sh  start_rebuilt_runai_v2.sh
tests/: conftest.py  test_path_s3.py  test_rebuilder.py  test_utils_s3.py
tests/images/: test_olive_boxes.py
tests/utils/: test_kube.py  test_logger.py  test_s3.py  test_uima.py
(+6 files in other folders)
