[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "impresso_commons"
authors = [
    {name="Maud Ehrmann", email="maud.ehrmann@epfl.ch"},
    {name="Matteo Romanello", email="matteo.romanello@gmail.com"}
]
description = "Python module highly reusable within impresso."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version","dependencies"]



[project.urls]
Homepage = "https://github.com/impresso/impresso-pycommons"
Documentaton = "https://impresso-pycommons.readthedocs.io/en/latest/" 

[tool.setuptools.dynamic]
version = {attr = "impresso_commons.__version__"}
dependencies = {file = ["requirements.txt"]}
[tool.setuptools.packages.find]
include = ["impresso_commons*"]
namespaces = false

[tool.setuptools.package-data]
impresso_commons = [
    "data/xmi/*.xml",
    "data/config/*.json",
    "schemas/json/*/*.json",
    "schemas/docs/*/*.json",
    "schemas/*",
]

[project.scripts]
impresso-partitioner = "impresso_commons.utils.daskutils:main"
impresso-rebuilder = "impresso_commons.text.rebuilder:main"
